--- a/plugin.program.chrome.launcher/resources/language/English/strings.xml
+++ b/plugin.program.chrome.launcher/resources/language/English/strings.xml
@@ -12,4 +12,5 @@
   <string id="30011">Chrome/script path</string>
   <string id="30012">Use own user profile (Could take some time on first start)</string>
   <string id="30016">Use kiosk mode?</string>
+  <string id="30017">Debug</string>
 </strings>
