--- a/plugin.program.chrome.launcher/resources/language/German/strings.xml
+++ b/plugin.program.chrome.launcher/resources/language/German/strings.xml
@@ -9,4 +9,5 @@
   <string id="30010">Benutzerdefinierten Chrome/Skript Pfad nutzen</string>
   <string id="30011">Chrome/Skript Pfad</string>
   <string id="30012">Eigenes Nutzerprofil nutzen (Kann beim ersten Start etwas dauern)</string>
+  <string id="30017">Debugprotokollierung</string>
 </strings>
