Simplify the settings

--- a/plugin.program.remote.control.browser/resources/language/German/strings.xml
+++ b/plugin.program.remote.control.browser/resources/language/German/strings.xml
@@ -3,9 +3,13 @@
   <string id="30001">Website hinzufügen</string>
   <string id="30002">Website entfernen</string>
   <string id="30003">Titel</string>
-  <string id="30005">Chrome nicht gefunden</string>
+  <string id="30005">Browser nicht gefunden</string>
   <string id="30006">Website Einstellungen ändern</string>
-  <string id="30010">Benutzerdefinierten Chrome/Skript Pfad nutzen</string>
-  <string id="30011">Chrome/Skript Pfad</string>
-  <string id="30012">Eigenes Nutzerprofil nutzen (Kann beim ersten Start etwas dauern)</string>
+  <string id="30018">Abhängigkeiten</string>
+  <string id="30019">Browser Pfad</string>
+  <string id="30020">Browser Argumente</string>
+  <string id="30021">xdotool Pfad</string>
+  <string id="30022">Warnung: Python-Paket „psutil“ fehlt</string>
+  <string id="30023">Warnung: Python-Paket „pyalsaaudio“ fehlt</string>
+  <string id="30024">Warnung: Python-Paket „pylirc2“ fehlt</string>
 </strings>
