--- a/plugin.program.remote.control.browser/resources/language/English/strings.xml
+++ b/plugin.program.remote.control.browser/resources/language/English/strings.xml
@@ -4,10 +4,14 @@
   <string id="30002">Remove Website</string>
   <string id="30003">Title</string>
   <string id="30004">URL</string>
-  <string id="30005">Chrome not found</string>
+  <string id="30005">Browser not found</string>
   <string id="30006">Edit Website Settings</string>
   <string id="30007">Thumbnail</string>
-  <string id="30010">Use custom Chrome/script path</string>
-  <string id="30011">Chrome/script path</string>
-  <string id="30012">Use own user profile (Could take some time on first start)</string>
+  <string id="30018">Dependencies</string>
+  <string id="30019">Browser Path</string>
+  <string id="30020">Browser Arguments</string>
+  <string id="30021">xdotool Path</string>
+  <string id="30022">Warning: Missing Python package “psutil”</string>
+  <string id="30023">Warning: Missing Python package “pyalsaaudio”</string>
+  <string id="30024">Warning: Missing Python package “pylirc2”</string>
 </strings>
