--- a/plugin.program.remote.control.browser/resources/language/English/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/English/strings.po
@@ -90,3 +90,11 @@ msgstr ""
 msgctxt "#30026"
 msgid "Warning: Missing Python package “Pillow”"
 msgstr ""
+
+msgctxt "#30027"
+msgid "Edit Keymap"
+msgstr ""
+
+msgctxt "#30028"
+msgid "LIRC Configuration File"
+msgstr ""
