--- a/plugin.program.remote.control.browser/resources/language/German/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/German/strings.po
@@ -108,3 +108,27 @@ msgstr "Linkcast Aktivieren"
 msgctxt "#30031"
 msgid "Linkcast Port"
 msgstr "Linkcast Port"
+
+msgctxt "#30032"
+msgid "Kodi Linkcast"
+msgstr ""
+
+msgctxt "#30033"
+msgid "Remote Control Browser Addon"
+msgstr ""
+
+msgctxt "#30034"
+msgid "The link was sent to Kodi."
+msgstr "Die Link wurde zu Kodi gesendet."
+
+msgctxt "#30035"
+msgid "Linkcast"
+msgstr "Linkcast"
+
+msgctxt "#30036"
+msgid "Drag this bookmarklet to the bookmarks bar and then you can use it to linkcast your current webpage:"
+msgstr "Ziehen Sie dieses Bookmarklet in die Lesezeichenleiste und dann können Sie verwenden, um Ihre aktuelle Webseite zu linkcast:"
+
+msgctxt "#30037"
+msgid "Kodi Linkcast does not support the scheme: %(url)s"
+msgstr "Kodi Linkcast nicht das Schema unterstützen: %(url)s"
