--- a/plugin.program.remote.control.browser/resources/language/English/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/English/strings.po
@@ -134,3 +134,7 @@ msgstr ""
 msgctxt "#30037"
 msgid "Kodi Linkcast does not support the scheme: %(url)s"
 msgstr ""
+
+msgctxt "#30038"
+msgid "Browser already running!"
+msgstr ""
