--- a/plugin.program.remote.control.browser/resources/language/German/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/German/strings.po
@@ -132,3 +132,7 @@ msgstr "Ziehen Sie dieses Bookmarklet in die Lesezeichenleiste und dann können 
 msgctxt "#30037"
 msgid "Kodi Linkcast does not support the scheme: %(url)s"
 msgstr "Kodi Linkcast nicht das Schema unterstützen: %(url)s"
+
+msgctxt "#30038"
+msgid "Browser already running!"
+msgstr "Browser ausgeführt bereits!"
