--- a/plugin.program.remote.control.browser/resources/language/German/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/German/strings.po
@@ -1,14 +1,14 @@
 # XBMC Media Center language file
 # Addon Name: Remote Control Browser
 # Addon id: plugin.program.remote.control.browser
-# Addon version: 0.1.0
+# Addon version: 0.4.0
 # Addon Provider: Chad Parry
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: 2016-05-25 22:19+0000\n"
-"PO-Revision-Date: 2016-05-25 22:19+0000\n"
+"PO-Revision-Date: 2016-06-05 02:43-0700\n"
 "Last-Translator: Chad Parry <github@chad.parry.org>\n"
 "Language-Team: LANGUAGE\n"
 "MIME-Version: 1.0\n"
