--- a/plugin.program.remote.control.browser/resources/language/English (US)/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/English (US)/strings.po
@@ -14,20 +14,20 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de_DE\n"
+"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 msgctxt "#30001"
 msgid "Add Bookmark"
-msgstr "Lesezeichen Hinzufügen"
+msgstr "Add Bookmark"
 
 msgctxt "#30002"
 msgid "Remove Bookmark"
-msgstr "Lesezeichen Entfernen"
+msgstr "Remove Bookmark"
 
 msgctxt "#30003"
 msgid "Title"
-msgstr "Titel"
+msgstr "Title"
 
 msgctxt "#30004"
 msgid "URL"
@@ -35,11 +35,11 @@ msgstr "URL"
 
 msgctxt "#30005"
 msgid "Browser not found!"
-msgstr "Browser nicht gefunden!"
+msgstr "Browser not found!"
 
 msgctxt "#30006"
 msgid "Edit Bookmark"
-msgstr "Lesezeichen Ändern"
+msgstr "Edit Bookmark"
 
 msgctxt "#30007"
 msgid "Thumbnail"
@@ -47,55 +47,55 @@ msgstr "Thumbnail"
 
 msgctxt "#30018"
 msgid "Dependencies"
-msgstr "Abhängigkeiten"
+msgstr "Dependencies"
 
 msgctxt "#30019"
 msgid "Browser Path"
-msgstr "Browser Pfad"
+msgstr "Browser Path"
 
 msgctxt "#30020"
 msgid "Browser Arguments"
-msgstr "Browser Argumente"
+msgstr "Browser Arguments"
 
 msgctxt "#30021"
 msgid "“xdotool” Path"
-msgstr "„xdotool“ Pfad"
+msgstr "“xdotool” Path"
 
 msgctxt "#30022"
 msgid "Warning: Missing Python package “psutil”"
-msgstr "Warnung: Python-Paket „psutil“ fehlt"
+msgstr "Warning: Missing Python package “psutil”"
 
 msgctxt "#30023"
 msgid "Warning: Missing Python package “pyalsaaudio”"
-msgstr "Warnung: Python-Paket „pyalsaaudio“ fehlt"
+msgstr "Warning: Missing Python package “pyalsaaudio”"
 
 msgctxt "#30024"
 msgid "Warning: Missing Python package “pylirc2”"
-msgstr "Warnung: Python-Paket „pylirc2“ fehlt"
+msgstr "Warning: Missing Python package “pylirc2”"
 
 msgctxt "#30025"
 msgid "Launch Bookmark"
-msgstr "Lesezeichen Starten"
+msgstr "Launch Bookmark"
 
 msgctxt "#30026"
 msgid "Warning: Missing Python package “Pillow”"
-msgstr "Warnung: Python-Paket „Pillow“ fehlt"
+msgstr "Warning: Missing Python package “Pillow”"
 
 msgctxt "#30027"
 msgid "Edit Keymap"
-msgstr "Keymap Ändern"
+msgstr "Edit Keymap"
 
 msgctxt "#30028"
 msgid "LIRC Configuration File"
-msgstr "LIRC Konfigurationsdatei"
+msgstr "LIRC Configuration File"
 
 msgctxt "#30029"
 msgid "Loading Webpage"
-msgstr "Webseite Wird Geladen"
+msgstr "Loading Webpage"
 
 msgctxt "#30030"
 msgid "Enable Linkcast"
-msgstr "Linkcast Aktivieren"
+msgstr "Enable Linkcast"
 
 msgctxt "#30031"
 msgid "Linkcast Port"
@@ -107,11 +107,11 @@ msgstr "Kodi Linkcast"
 
 msgctxt "#30033"
 msgid "Remote Control Browser Add-on"
-msgstr "Remote Control Browser Addon"
+msgstr "Remote Control Browser Add-on"
 
 msgctxt "#30034"
 msgid "The link was sent to Kodi."
-msgstr "Die Link wurde zu Kodi gesendet."
+msgstr "The link was sent to Kodi."
 
 msgctxt "#30035"
 msgid "Linkcast"
@@ -119,12 +119,12 @@ msgstr "Linkcast"
 
 msgctxt "#30036"
 msgid "Drag this bookmarklet to the bookmarks bar and then you can use it to linkcast your current webpage:"
-msgstr "Ziehen Sie dieses Bookmarklet in die Lesezeichenleiste und dann können Sie verwenden, um Ihre aktuelle Webseite zu linkcast:"
+msgstr "Drag this bookmarklet to the bookmarks bar and then you can use it to linkcast your current webpage:"
 
 msgctxt "#30037"
 msgid "Kodi Linkcast does not support the scheme: %(url)s"
-msgstr "Kodi Linkcast nicht das Schema unterstützen: %(url)s"
+msgstr "Kodi Linkcast does not support the scheme: %(url)s"
 
 msgctxt "#30038"
 msgid "Browser already running!"
-msgstr "Browser ausgeführt bereits!"
+msgstr "Browser already running!"
