--- a/plugin.program.remote.control.browser/resources/language/English/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/English/strings.po
@@ -6,24 +6,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
+"Report-Msgid-Bugs-To: Chad Parry <github@chad.parry.org>\n"
 "POT-Creation-Date: 2016-05-25 22:19+0000\n"
 "PO-Revision-Date: 2016-06-05 02:43-0700\n"
 "Last-Translator: Chad Parry <github@chad.parry.org>\n"
-"Language-Team: LANGUAGE\n"
+"Language-Team: Remote Control Browser Translation\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-
-msgctxt "Addon Summary"
-msgid "Browse websites with a remote control"
-msgstr ""
-
-msgctxt "Addon Description"
-msgid "Browse websites with a remote control"
-msgstr ""
 
 msgctxt "#30001"
 msgid "Add Bookmark"
@@ -68,7 +60,7 @@ msgid "Browser Arguments"
 msgstr ""
 
 msgctxt "#30021"
-msgid "xdotool Path"
+msgid "“xdotool” Path"
 msgstr ""
 
 msgctxt "#30022"
@@ -100,7 +92,7 @@ msgid "LIRC Configuration File"
 msgstr ""
 
 msgctxt "#30029"
-msgid "Downloading Webpage"
+msgid "Loading Webpage"
 msgstr ""
 
 msgctxt "#30030"
@@ -116,7 +108,7 @@ msgid "Kodi Linkcast"
 msgstr ""
 
 msgctxt "#30033"
-msgid "Remote Control Browser Addon"
+msgid "Remote Control Browser Add-on"
 msgstr ""
 
 msgctxt "#30034"
