--- a/plugin.program.remote.control.browser/resources/language/Portuguese (Brazil)/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/Portuguese (Brazil)/strings.po
@@ -7,27 +7,27 @@ msgid ""
 msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
 "Report-Msgid-Bugs-To: Chad Parry <github@chad.parry.org>\n"
-"POT-Creation-Date: 2016-05-25 22:19+0000\n"
-"PO-Revision-Date: 2016-06-05 02:43-0700\n"
+"POT-Creation-Date: 2016-06-06 16:47-0700\n"
+"PO-Revision-Date: 2016-06-06 16:47-0700\n"
 "Last-Translator: Chad Parry <github@chad.parry.org>\n"
 "Language-Team: Remote Control Browser Translation\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de_DE\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: pt_BR\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 msgctxt "#30001"
 msgid "Add Bookmark"
-msgstr "Lesezeichen Hinzufügen"
+msgstr "Adicionar Marcador"
 
 msgctxt "#30002"
 msgid "Remove Bookmark"
-msgstr "Lesezeichen Entfernen"
+msgstr "Remover Marcador"
 
 msgctxt "#30003"
 msgid "Title"
-msgstr "Titel"
+msgstr "Título"
 
 msgctxt "#30004"
 msgid "URL"
@@ -35,83 +35,83 @@ msgstr "URL"
 
 msgctxt "#30005"
 msgid "Browser not found!"
-msgstr "Browser nicht gefunden!"
+msgstr "Navegador não encontrado!"
 
 msgctxt "#30006"
 msgid "Edit Bookmark"
-msgstr "Lesezeichen Ändern"
+msgstr "Editar Marcador"
 
 msgctxt "#30007"
 msgid "Thumbnail"
-msgstr "Thumbnail"
+msgstr "Miniatura"
 
 msgctxt "#30018"
 msgid "Dependencies"
-msgstr "Abhängigkeiten"
+msgstr "Dependências"
 
 msgctxt "#30019"
 msgid "Browser Path"
-msgstr "Browser Pfad"
+msgstr "Caminho do Navegador"
 
 msgctxt "#30020"
 msgid "Browser Arguments"
-msgstr "Browser Argumente"
+msgstr "Argumentos do Navegador"
 
 msgctxt "#30021"
 msgid "“xdotool” Path"
-msgstr "„xdotool“ Pfad"
+msgstr "Caminho do “xdotool”"
 
 msgctxt "#30022"
 msgid "Warning: Missing Python package “psutil”"
-msgstr "Warnung: Python-Paket „psutil“ fehlt"
+msgstr "Atenção: Faltando pacote Python “psutil”"
 
 msgctxt "#30023"
 msgid "Warning: Missing Python package “pyalsaaudio”"
-msgstr "Warnung: Python-Paket „pyalsaaudio“ fehlt"
+msgstr "Atenção: Faltando pacote Python “pyalsaaudio”"
 
 msgctxt "#30024"
 msgid "Warning: Missing Python package “pylirc2”"
-msgstr "Warnung: Python-Paket „pylirc2“ fehlt"
+msgstr "Atenção: Faltando pacote Python “pylirc2”"
 
 msgctxt "#30025"
 msgid "Launch Bookmark"
-msgstr "Lesezeichen Starten"
+msgstr "Iniciar Marcador"
 
 msgctxt "#30026"
 msgid "Warning: Missing Python package “Pillow”"
-msgstr "Warnung: Python-Paket „Pillow“ fehlt"
+msgstr "Atenção: Faltando pacote Python “Pillow”"
 
 msgctxt "#30027"
 msgid "Edit Keymap"
-msgstr "Keymap Ändern"
+msgstr "Editar Keymap"
 
 msgctxt "#30028"
 msgid "LIRC Configuration File"
-msgstr "LIRC Konfigurationsdatei"
+msgstr "Arquivo de Configuração do LIRC"
 
 msgctxt "#30029"
 msgid "Loading Webpage"
-msgstr "Webseite Wird Geladen"
+msgstr "Carregando Página Web"
 
 msgctxt "#30030"
 msgid "Enable Linkcast"
-msgstr "Linkcast Aktivieren"
+msgstr "Ativar Linkcast"
 
 msgctxt "#30031"
 msgid "Linkcast Port"
-msgstr "Linkcast Port"
+msgstr "Porta do Linkcast"
 
 msgctxt "#30032"
 msgid "Kodi Linkcast"
 msgstr "Kodi Linkcast"
 
 msgctxt "#30033"
-msgid "Remote Control Browser Add-on"
-msgstr "Remote Control Browser Addon"
+msgid "Remote Control Browser Addon"
+msgstr "Remote Control Browser Add-on"
 
 msgctxt "#30034"
 msgid "The link was sent to Kodi."
-msgstr "Die Link wurde zu Kodi gesendet."
+msgstr "O link foi enviado para Kodi."
 
 msgctxt "#30035"
 msgid "Linkcast"
@@ -119,12 +119,12 @@ msgstr "Linkcast"
 
 msgctxt "#30036"
 msgid "Drag this bookmarklet to the bookmarks bar and then you can use it to linkcast your current webpage:"
-msgstr "Ziehen Sie dieses Bookmarklet in die Lesezeichenleiste und dann können Sie verwenden, um Ihre aktuelle Webseite zu linkcast:"
+msgstr "Arraste este bookmarklet para a barra de marcadores e então você pode usá-lo para linkcast sua página web atual:"
 
 msgctxt "#30037"
 msgid "Kodi Linkcast does not support the scheme: %(url)s"
-msgstr "Kodi Linkcast nicht das Schema unterstützen: %(url)s"
+msgstr "O Kodi Linkcast não suporta o esquema: %(url)s"
 
 msgctxt "#30038"
 msgid "Browser already running!"
-msgstr "Browser ausgeführt bereits!"
+msgstr "Navegador já em execução!"
