--- a/plugin.program.remote.control.browser/resources/language/English (US)/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/English (US)/strings.po
@@ -1,7 +1,7 @@
 # XBMC Media Center language file
 # Addon Name: Remote Control Browser
 # Addon id: plugin.program.remote.control.browser
-# Addon version: 1.0.1
+# Addon version: 1.1.0
 # Addon Provider: Chad Parry
 msgid ""
 msgstr ""
@@ -128,3 +128,11 @@ msgstr "Kodi Linkcast does not support the scheme: %(url)s"
 msgctxt "#30038"
 msgid "Browser already running!"
 msgstr "Browser already running!"
+
+msgctxt "#30039"
+msgid "Browser reported an error!"
+msgstr "Browser reported an error!"
+
+msgctxt "#30040"
+msgid "Suspend Kodi During Browsing"
+msgstr "Suspend Kodi During Browsing"
