--- a/plugin.program.remote.control.browser/changelog.txt
+++ b/plugin.program.remote.control.browser/changelog.txt
@@ -1,2 +1,8 @@
-1.0.0
+v1.0.2 (2016-10-03)
+- Clear languages from metadata
+
+v1.0.1 (2016-09-14)
+- Expect newer psutil
+
+v1.0.0 (2016-08-16)
 - Initial public release
