--- a/plugin.program.remote.control.browser/resources/language/resource.language.en_gb/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/resource.language.en_gb/strings.po
@@ -126,3 +126,7 @@ msgstr ""
 msgctxt "#30038"
 msgid "Browser already running!"
 msgstr ""
+
+msgctxt "#30039"
+msgid "Warning: Insufficient memory"
+msgstr ""
