--- a/plugin.program.remote.control.browser/resources/language/resource.language.en_us/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/resource.language.en_us/strings.po
@@ -124,3 +124,7 @@ msgstr "Kodi Linkcast does not support the scheme: %(url)s"
 msgctxt "#30038"
 msgid "Browser already running!"
 msgstr "Browser already running!"
+
+msgctxt "#30039"
+msgid "Warning: Insufficient memory"
+msgstr "Warning: Insufficient memory"
