--- a/plugin.program.remote.control.browser/changelog.txt
+++ b/plugin.program.remote.control.browser/changelog.txt
@@ -1,3 +1,6 @@
+v1.0.6 (2017-01-22)
+- Detect Epiphany browsers
+
 v1.0.5 (2016-11-27)
 - Dynamically adjust settings values but not the settings schema
 
