--- a/plugin.program.remote.control.browser/resources/language/resource.language.pt_br/strings.po
+++ b/plugin.program.remote.control.browser/resources/language/resource.language.pt_br/strings.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
 "Report-Msgid-Bugs-To: Chad Parry <github@chad.parry.org>\n"
 "POT-Creation-Date: 2016-06-06 16:47-0700\n"
-"PO-Revision-Date: 2017-04-02 10:46-0700\n"
+"PO-Revision-Date: 2018-11-23 19:35-0800\n"
 "Last-Translator: Chad Parry <github@chad.parry.org>\n"
 "Language-Team: Remote Control Browser Translation\n"
 "MIME-Version: 1.0\n"
@@ -136,3 +136,19 @@ msgstr "Navegador relatou um erro!"
 msgctxt "#30041"
 msgid "Suspend Kodi During Browsing"
 msgstr "Suspender Kodi Durante a Navegação"
+
+msgctxt "#30042"
+msgid "Sound Server"
+msgstr "Servidor de Som"
+
+msgctxt "#30043"
+msgid "PulseAudio"
+msgstr "PulseAudio"
+
+msgctxt "#30044"
+msgid "ALSA Audio"
+msgstr "Áudio ALSA"
+
+msgctxt "#30045"
+msgid "ALSA Volume Control Device"
+msgstr "Dispositivo para Controle de Volume"
